--- a/public/pages/css-modules/index.css
+++ b/public/pages/css-modules/index.css
@@ -36,7 +36,6 @@
             will-change: transform, box-shadow;
         }
         .service-card.all-year {
-            align-self : center; 
             margin-left: auto;
             margin-right: auto;
         }
@@ -199,7 +198,7 @@
         .usp-card .icon { color: var(--color-accent); }
         .guarantee-card { border-bottom: 5px solid var(--color-accent); height: 100%; display: flex; flex-direction: column; align-items: center; }
         .guarantee-card .icon { color: var(--color-primary); font-size: 3rem; }
-        .service-card.all-year { border: 2px solid var(--color-accent); }
+        .service-card.all-year { border: 2px solid var(--color-primary); }
 
 
         .commitment-content { display: flex; align-items: center; gap: 50px; }
@@ -251,6 +250,9 @@
             width: 100%; padding: 12px; border: 1px solid var(--color-footer); 
             border-radius: 8px; background-color: var(--color-background-base); 
             color: var(--color-dark-text);
+        }
+
+        .form-group select {
             -webkit-appearance: none; 
             -moz-appearance: none;
             appearance: none;
